--- a/MappingFile.json
+++ b/MappingFile.json
@@ -1,14 +1,14 @@
 {
 	"event": {
 		"commonEventHeader": {
-			"sourceId": "target",
+			"sourceId": "put_target",
 			"startEpochMicrosec": 1413378172000000,
 			"eventId": "ab305d54-85b4-a31b-7db2-fb6b977766",
 			"sequence": 0,
 			"domain": "fault",
 			"lastEpochMicrosec": 1413378172000033,
 			"eventName": "Fault_Route_Status",
-			"sourceName": "target",
+			"sourceName": "put_target",
 			"priority": "High",
 			"version": 3.0,
 			"reportingEntityName": "Domain_Contorller"
@@ -17,18 +17,18 @@
 			"eventSeverity": "CRITICAL",
 			"alarmCondition": "Route_Status",
 			"faultFieldsVersion": 2.0,
-			"specificProblem": "Fault_SOTN_Service_Status",
+			"specificProblem": "put_Fault_SOTN_Service_Status",
 			"alarmAdditionalInformation": [
 				{
-					"name": "target",
+					"name": "put_target",
 					"value": ""
 				},
 				{
-					"name": "tp-id",
+					"name": "put_tp-id",
 					"value": ""
 				},
 				{
-					"name": "oper-status",
+					"name": "put_oper-status",
 					"value": ""
 				}
 			],
